@@ -1,13 +1,11 @@
 package com.sentrysoftware.matrix.converter.state.computes.translate;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import com.sentrysoftware.matrix.converter.state.IConnectorStateConverter;
 import com.sentrysoftware.matrix.converter.state.computes.common.ColumnProcessor;
 import com.sentrysoftware.matrix.converter.state.computes.common.ComputeTypeProcessor;
+import com.sentrysoftware.matrix.converter.state.computes.common.TranslationTableProcessor;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -15,10 +13,14 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConnectorTranslateProperty {
 
-	private static final String HDF_TYPE_VALUE = "";
-	private static final String YAML_TYPE_VALUE = "";
+	private static final String HDF_TYPE_VALUE = "Translate";
+	private static final String YAML_TYPE_VALUE = "translate";
 
 	public static Set<IConnectorStateConverter> getConnectorProperties() {
-		return Collections.emptySet();
+		return Set.of(
+			new ComputeTypeProcessor(HDF_TYPE_VALUE, YAML_TYPE_VALUE),
+			new ColumnProcessor(),
+			new TranslationTableProcessor()
+		);
 	}
 }
